--- a/templates/about.html
+++ b/templates/about.html
@@ -3,10 +3,12 @@
 {% block content %}
 <div class="about-site">
     <br>
-    <p>Обнаружил и зашел случайно, немедленно покинь и забудь!</p>
-    <p>В противном случае, не говори никому!</p>
+    <p>Обнаружил(а) и зашел(а) случайно, немедленно покинь и забудь!</p>
+    <p>Сделано для личного пользования и устанолено на Heroku (Developer Free), а там ограничения.</p>
+    <p>Если захотел(а) себе такой, зарегистрируйся на <a href="https://heroku.com">heroku.com</a>, и установи себе свою, отдельную личную копию.
+      <a href="https://github.com/rty65tt/oper-reader">[github.com]</a></p>
     <br>
-    <p>Сайт сделан для личного пользования.</p>
+
     <ul>Цели:
         <li>Фильтр по комментаторам (для удобства чтения комментариий).</li>
         <li>Убрать рекламу и лишние элементы.</li>
@@ -15,7 +17,7 @@
     </ul>
   <br><br><br><br>
 
-
+<!--
   <div>Сообщение (пока не работает, прояви смекалку)</div>
   <form action="/mail/" method="post">
 
@@ -25,7 +27,7 @@
     <input type="submit" class="submit" value="Отправить сообщение">
 
   </form>
-
-
 </div>
+
+-->
 {% endblock %}
