Fix forum js script + fix CRLF -> LF

--- a/templates/text.html
+++ b/templates/text.html
@@ -11,4 +11,9 @@
 
 {# include "forum.html" #}
 
+<div class="orig-site">
+    <a target="_blank" href="{{ u }}">{{ u }}</a>
+</div>
+<br>
+
 {% endblock %}
