add robots.txt for yandex bots - Disallow all

--- a/stat/css/main.styl
+++ b/stat/css/main.styl
@@ -144,8 +144,14 @@ p
       border-bottom 1px solid #151515
     dt
       border-top 1px solid #151515
+    dt:first-child
+      border-top 1px solid #101010
+    dd
+      border-bottom 1px solid #070707
+
   dt,h1
     padding 30px 20px 10px
+
 
     a
       {$lnk}
@@ -165,9 +171,6 @@ p
       &:hover
         color #94804C
 
-  .news-list
-    dd
-      border-bottom 1px solid #070707
 
   dd
     padding 0 20px
