--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/png" href="/stat/favicon.png?5">
 
     <link rel="stylesheet" href="/stat/css/reset-v2.0.css">
-    <link rel="stylesheet" href="/stat/css/main.css?2017101301">
+    <link rel="stylesheet" href="/stat/css/main.css?2018060101">
     <!-- <link rel="stylesheet" href="/stat/css/main.css?{% now "His" %}"> -->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script src="/stat/js/main.js?1"></script>
@@ -77,8 +77,8 @@
       
       for (var i = 0; i < youtube.length; i++) {
         
-       // var source = "https://i.ytimg.com/vi_webp/"+ youtube[i].dataset.embed +"/sddefault.webp";
-        var source = "https://i1.ytimg.com/vi/"+ youtube[i].dataset.embed +"/hqdefault.jpg";
+        // var source = "https://i1.ytimg.com/vi_webp/"+ youtube[i].dataset.embed +"/hqdefault.webp";
+        var source = "https://i1.ytimg.com/vi/"+      youtube[i].dataset.embed +"/hqdefault.jpg";
 
             var di = document.createElement("div");
             di.className = "embed-yt-img";
