--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <br>
     <p>Обнаружил(а) и зашел(а) случайно, немедленно покинь и забудь!</p>
     <p>Сделано для личного пользования и устанолено на Heroku (Developer Free), а там ограничения.</p>
-    <p>Если захотел(а) себе такой, зарегистрируйся на <a href="https://heroku.com">heroku.com</a>, и установи себе свою, отдельную личную копию.
+    <p>Если захотел(а) себе такой, зарегистрируйся на <a href="https://railway.app">railway.app</a>, и установи себе свою, отдельную личную копию.
       <a href="https://github.com/rty65tt/oper-reader">[github.com]</a></p>
     <br>
 
